--- a/src/app/trayecto/trayecto-crear/trayecto-crear.component.html
+++ b/src/app/trayecto/trayecto-crear/trayecto-crear.component.html
@@ -1,11 +1,4 @@
-<head>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel="stylesheet" href="http://weareoutman.github.io/clockpicker/dist/bootstrap-clockpicker.min.css">
-  <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="http://weareoutman.github.io/clockpicker/dist/bootstrap-clockpicker.min.js"></script>
-</head>
-
+<div class = mx-0>
 <div class="container-fluid">
   <div class="row">
     <div class="col-12">
@@ -13,12 +6,12 @@
       <h2 class="text-center">Bienvenido a Trayecto</h2>
       <br />
       <div class="row justify-content-center">
-      <form
-        name="trayecto"
-        (ngSubmit)="f.form.valid && createTrayecto()"
-        #f="ngForm"
-        novalidate
+      <div class="col-sm-8">
+      <form [formGroup]="productForm" 
       >
+        <label class="text-center">Bienvenido a Trayecto<input formControlName="title" /></label>
+
+        <div class="row justify-content-center">
         <div class="col-sm-6">
         <div class="form-group">
           <label for="fechaInicial"><b>Fecha Inicial</b></label>
@@ -32,7 +25,7 @@
             (click)="d.toggle()"
             #fechaInicial="ngModel"
             [ngClass]="{
-              'is-invalid': f.submitted &&n (fechaFinal.untouched || fechaFinal.invalid)
+              'is-invalid': f.submitted &&n (fechaInicial.untouched || fechaInicial.invalid)
             }"
             required
           />
@@ -63,6 +56,9 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="row justify-content-center">
+       <div class="col-sm-6">
         <div class="form-group" *ngIf="ciudades != null">
           <label for="origen"><b>Origen</b></label>
           <select
@@ -81,6 +77,9 @@
             >
           </select>
         </div>
+      </div>
+
+      <div class="col-sm-6">
 
         <div class="form-group" *ngIf="ciudades != null">
           <label for="destino"><b>Destino</b></label>
@@ -100,7 +99,31 @@
             >
           </select>
         </div>
+      </div>
+      </div>
+      
+      <div class="row justify-content-center">
+      <div class="col-sm-6">
 
+          <div class="form-group">
+            <label for="hsalida"><b>Hora de llegada</b></label>
+            <ngb-timepicker [ngModel]="horaSalida" [meridian]=true [ngModelOptions]="{standalone: true}" required></ngb-timepicker>
+          </div>
+        </div>
+  
+        <div class="col-sm-6">
+  
+          <div class="form-group">
+              <label for="hsalida"><b>Hora de salida</b></label>
+              <ngb-timepicker [ngModel]="horaLlegada" [meridian]=true [ngModelOptions]="{standalone: true}" required></ngb-timepicker>
+          </div>
+        </div>
+      </div>
+
+      <
+
+      <div class="row justify-content-center">
+      <div class="col-sm-12">
         <div class="form-group">
           <label for="cupos"><b>Cupos disponibles</b></label>
           <input
@@ -110,11 +133,19 @@
             id="cupos"
             [(ngModel)]="infoTrayecto.cupos"
             required
+            [ngClass]="{
+              'is-invalid': f.submitted &&n (cupos>0)
+            }"
           />
           <div class="invalid-feedback">
             <div>Faltan los cupos disponibles</div>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="row justify-content-center">
+      <div class="col-sm-12">
 
         <div class="form-group">
           <label for="costo"><b>Costo</b></label>
@@ -125,34 +156,25 @@
             id="costo"
             [(ngModel)]="infoTrayecto.costo"
             required
+            [ngClass]="{
+              'is-invalid': f.submitted &&n (costo>0)
+            }"
           />
           <div class="invalid-feedback">
             <div>Falta el costo</div>
           </div>
         </div>
+      </div>
+    </div>
 
-        
-
-        <div class="form-group">
-          <label for="hsalida"><b>Hora de salida</b></label>
-          <div class="form-group">
-              <label for="hsalida"><b>Hora de salida</b></label>
-              <ngb-timepicker [ngModel]="horaSalida" [meridian]=true [ngModelOptions]="{standalone: true}"             required
-              ></ngb-timepicker>
-          </div>
-        </div>
-
-
-        <div class="form-group">
-            <label for="hsalida"><b>Hora de salida</b></label>
-            <ngb-timepicker [ngModel]="horaSalida" [meridian]=true [ngModelOptions]="{standalone: true}"></ngb-timepicker>
-        </div>
 
         <br>
         <a class="badge badge-pill badge-primary" data-toggle="collapse" href="#collapse" role="button" aria-expanded="false" aria-controls="collapseExample" toggle="false">
             Mas Opciones
-          </a>
-          
+        </a>
+        <br>
+
+
         <div id="collapse" class="collapse">
         <div class="form-group">
             <label for="combustible"><b>Combustible</b></label>
@@ -163,7 +185,19 @@
               id="combustible"
               [(ngModel)]="infoTrayecto.combustible"
             />
-          </div>
+        </div>
+
+        <div class="form-group">
+            <label for="numParadas"><b>numParadas</b></label>
+            <input
+              type="number"
+              name="combustible"
+              class="form-control"
+              id="combustible"
+              [(ngModel)]="infoTrayecto.combustible"
+            />
+        </div>
+
         <div class="form-group" *ngIf="ciudades != null">
           <label for="parada"><b>Paradas adicionales</b></label>
           <select
@@ -183,6 +217,17 @@
           </select>
         </div>
 
+       
+        <div formArrayName="selling_points">
+            <div *ngFor="let item of sellingPoints.controls; let pointIndex=index" [formGroupName]="pointIndex">
+            <label>
+              Selling Point: <input formControlName="point" />
+            </label>
+            <button type="button" (click)="deleteSellingPoint(pointIndex)">Delete Selling Point</button>
+            </div>
+            <button type="button" (click)="addSellingPoint()">Add Selling Point</button>
+          </div>
+
         <div class="form-group" *ngIf="peajes != null">
           <label for="destino"><b>Peajes</b></label>
           <select
@@ -199,7 +244,7 @@
             }}</option>
           </select>
         </div>
-      </div>
+        </div>
         <div class="row form-inline justify-content-center align-self-center">
           <button type="submit" class="btn btn-primary">Create</button>
           <div class="divider"></div>
@@ -213,7 +258,32 @@
         </div>
       </form>
     </div>
+    </div>
       <br />
     </div>
   </div>
 </div>
+</div> 
+
+<!-- <h1>Edit Product</h1>
+
+<form [formGroup]="productForm">
+
+    <label>
+      Title: <input formControlName="title" />
+    </label>
+    <h2>Selling Points</h2>
+  
+    <div formArrayName="selling_points">
+      <div *ngFor="let item of sellingPoints.controls; let pointIndex=index" [formGroupName]="pointIndex">
+      <label>
+        Selling Point: <input formControlName="point" />
+      </label>
+      <button type="button" (click)="deleteSellingPoint(pointIndex)">Delete Selling Point</button>
+      </div>
+      <button type="button" (click)="addSellingPoint()">Add Selling Point</button>
+    </div>
+  
+  </form>
+  
+  {{ this.productForm.value | json }}--> 
