--- a/src/app/trayecto/trayecto-crear/trayecto-crear.component.html
+++ b/src/app/trayecto/trayecto-crear/trayecto-crear.component.html
@@ -7,9 +7,8 @@
       <br />
       <div class="row justify-content-center">
       <div class="col-sm-8">
-      <form [formGroup]="productForm" 
-      >
-        <label class="text-center">Bienvenido a Trayecto<input formControlName="title" /></label>
+        <form name="trayecto" (ngSubmit)="f.form.valid && createTrayecto()" #f="ngForm" novalidate>
+        <label class="text-center">Bienvenido a Trayecto</label>
 
         <div class="row justify-content-center">
         <div class="col-sm-6">
@@ -216,17 +215,6 @@
             >
           </select>
         </div>
-
-       
-        <div formArrayName="selling_points">
-            <div *ngFor="let item of sellingPoints.controls; let pointIndex=index" [formGroupName]="pointIndex">
-            <label>
-              Selling Point: <input formControlName="point" />
-            </label>
-            <button type="button" (click)="deleteSellingPoint(pointIndex)">Delete Selling Point</button>
-            </div>
-            <button type="button" (click)="addSellingPoint()">Add Selling Point</button>
-          </div>
 
         <div class="form-group" *ngIf="peajes != null">
           <label for="destino"><b>Peajes</b></label>
