Pago y mapita funcionando(esqueleto)

--- a/src/app/pago/pago-create/pago-create.component.html
+++ b/src/app/pago/pago-create/pago-create.component.html
@@ -15,19 +15,17 @@
                   </a>
         
             <div id="collapse" class="collapse">
-            <form name="pago" (ngSubmit)="f.form.valid && pagoEfectivo()" #f="ngForm" novalidate>
+            <form name="pago" >
                 
-                <div class="form-group">
+                <div class="form-group" >
                     <label for="valor"><b>Valor</b></label>
-                    <input disabled type="text" name="valor" class="form-control" id="valor" [(ngModel)]="pago.valor"
-                        #valor="ngModel" [ngClass]="{ 'is-invalid': f.submitted && valor.invalid }" value="{{valor}}"required>
-                    <div class="invalid-feedback">
-                        <div>Falta el valor</div>
-                    </div>
+                    <input disabled type="text" class="form-control" 
+                    value="{{valor}}" >
+                    
                 </div>
                 <br>
                 <div class="row form-inline justify-content-center align-self-center">
-                    <button type="submit" class="btn btn-primary" routerLink="home" >Pagar</button>
+                    <button type="submit" class="btn btn-primary" (click)="pagoEfectivo()">Pagar</button>
                     <div class="divider"></div>
                     <button type="button" class="btn btn-danger" (click)="cancelCreation()">Cancelar</button>
                 </div>
@@ -38,7 +36,7 @@
                         
                         <div class="form-group">
                             <label for="valor"><b>Entidad Bancaria 1</b></label>
-                            <input type="text" name="valor" class="form-control" id="valor" [(ngModel)]="pago.valor"
+                            <input type="text" name="valor" class="form-control" id="valor" [(ngModel)]="info.entidad2"
                                 #valor="ngModel" [ngClass]="{ 'is-invalid': f.submitted && valor.invalid }" required>
                             <div class="invalid-feedback">
                                 <div>Falta el valor</div>
@@ -46,7 +44,7 @@
                         </div>
                         <div class="form-group">
                                 <label for="valor"><b>Entidad Bancaria 2</b></label>
-                                <input type="text" name="valor" class="form-control" id="valor" [(ngModel)]="pago.valor"
+                                <input type="text" name="valor" class="form-control" id="valor" [(ngModel)]="info.entidad2"
                                     #valor="ngModel" [ngClass]="{ 'is-invalid': f.submitted && valor.invalid }" required>
                                 <div class="invalid-feedback">
                                     <div>Falta el valor</div>
@@ -54,7 +52,7 @@
                             </div>
                             <div class="form-group">
                                     <label for="valor"><b>Tarjeta De Credito 1</b></label>
-                                    <input type="text" name="valor" class="form-control" id="valor" [(ngModel)]="pago.valor"
+                                    <input type="text" name="valor" class="form-control" id="valor" [(ngModel)]="info.t1"
                                         #valor="ngModel" [ngClass]="{ 'is-invalid': f.submitted && valor.invalid }" required>
                                     <div class="invalid-feedback">
                                         <div>Falta el valor</div>
@@ -62,7 +60,7 @@
                                 </div>
                                 <div class="form-group">
                                         <label for="valor"><b>Tarjeta De Credito 2</b></label>
-                                        <input type="text" name="valor" class="form-control" id="valor" [(ngModel)]="pago.valor"
+                                        <input type="text" name="valor" class="form-control" id="valor" [(ngModel)]="info.t2"
                                             #valor="ngModel" [ngClass]="{ 'is-invalid': f.submitted && valor.invalid }" required>
                                         <div class="invalid-feedback">
                                             <div>Falta el valor</div>
@@ -70,11 +68,9 @@
                                     </div>
                                     <div class="form-group">
                                             <label for="valor"><b>Valor</b></label>
-                                            <input type="text" name="valor" class="form-control" id="valor" [(ngModel)]="pago.valor"
-                                                #valor="ngModel" [ngClass]="{ 'is-invalid': f.submitted && valor.invalid }" required>
-                                            <div class="invalid-feedback">
-                                                <div>Falta el valor</div>
-                                            </div>
+                                            <input disabled type="text" class="form-control" 
+                                            value="{{valor}}" >
+                                            
                                         </div>
                         <div class="row form-inline justify-content-center align-self-center">
                             <button type="submit" class="btn btn-primary" routerLink="home" >Pagar</button>
