--- a/src/app/trayecto/listar-trayecto/listar-trayecto.component.html
+++ b/src/app/trayecto/listar-trayecto/listar-trayecto.component.html
@@ -18,11 +18,11 @@
 				<div class="row">
 						<div class="col-sm-5" *ngIf="i.ciudadOrigen!=null">
 								<h5>Ciudad Origen</h5>
-								<p>{{i.ciudadOrigen}}</p>
+								<p>{{i.ciudadOrigen.nombre}}</p>
 						</div>
 						<div class="col-sm-5" *ngIf="i.ciudadDestino!=null">
 								<h5>Ciudad Destino</h5>
-								<p>{{i.ciudadDestino}}</p>
+								<p>{{i.ciudadDestino.nombre}}</p>
 						</div>
 			</div>
 				<div class="row">
