--- a/src/app/home/home/home.component.css
+++ b/src/app/home/home/home.component.css
@@ -1,8 +1,9 @@
 
 
 body {
-    font-family: "Lato", sans-serif;
-  }
+  background-color: lightblue;
+  font-family: 'Rubik';font-size: 22px;
+}
   
   .sidenav {
     height: 100%;
