--- a/src/app/trayecto/mis-trayectos/mis-trayectos.component.css
+++ b/src/app/trayecto/mis-trayectos/mis-trayectos.component.css
@@ -15,3 +15,7 @@
     vertical-align: text-bottom;
     white-space: pre;
   }
+  body {
+    background-color: lightblue;
+    font-family: 'Rubik';font-size: 22px;
+}
