--- a/src/app/trayecto/trayecto-detail/trayecto-detail.component.css
+++ b/src/app/trayecto/trayecto-detail/trayecto-detail.component.css
@@ -1,3 +1,8 @@
 .map-container { height: 100%; }
 .map-content { display: block; }
 .description { margin-top: 10px; padding: 15px; background-color: bisque; border: 1px solid orange; }
+
+body {
+    background-color: lightblue;
+    font-family: 'Rubik';font-size: 22px;
+}
