--- a/src/app/usuario/usuario-vehiculos/usuario-vehiculos.component.css
+++ b/src/app/usuario/usuario-vehiculos/usuario-vehiculos.component.css
@@ -1,5 +1,6 @@
 body {
     background-color: lightblue;
+    font-family: 'Rubik';font-size: 22px;
   }
   ::ng-deep .mat-card-header{
     background-color:red !important;
