--- a/src/app/home/botones/botones.component.css
+++ b/src/app/home/botones/botones.component.css
@@ -1,3 +1,4 @@
 body {
-        font-family: 'Rubik';font-size: 22px;
-}
+        background-color: lightblue;
+        font-family: 'Karla';font-size: 22px;
+      }
