--- a/src/app/trayecto/mis-trayectos/mis-trayectos.component.css
+++ b/src/app/trayecto/mis-trayectos/mis-trayectos.component.css
@@ -17,5 +17,5 @@
   }
   body {
     background-color: lightblue;
-    font-family: 'Rubik';font-size: 22px;
+    font-family: 'Karla';font-size: 22px;
 }
