--- a/src/app/home/home/home.component.css
+++ b/src/app/home/home/home.component.css
@@ -2,7 +2,7 @@
 
 body {
   background-color: lightblue;
-  font-family: 'Rubik';font-size: 22px;
+  font-family: 'Karla';font-size: 22px;
 }
   
   .sidenav {
