--- a/src/app/trayecto/trayecto-crear/trayecto-crear.component.css
+++ b/src/app/trayecto/trayecto-crear/trayecto-crear.component.css
@@ -1,6 +1,6 @@
 body {
     background-color: lightblue;
-    font-family: 'Rubik';font-size: 22px;
+    font-family: 'Karla';font-size: 22px;
 }
 .custom-day {
     text-align: center;
